@startuml

title __OVERVIEW's Class Diagram__\n

  package  {
    package JavaFinalFx {
      package JavaFinalFx.overview {
        class AllDetails {
            - id : IntegerProperty
            - first : StringProperty
            - last : StringProperty
            - age : IntegerProperty
            - hobby : StringProperty
            - job : StringProperty
            - salary : IntegerProperty
            - test1 : IntegerProperty
            - test2 : IntegerProperty
            - test3 : IntegerProperty
            - test4 : IntegerProperty
            - test5 : IntegerProperty
            - test6 : IntegerProperty
            - test7 : IntegerProperty
            - test8 : IntegerProperty
            - test9 : IntegerProperty
            - test10 : IntegerProperty
            - ave : IntegerProperty
            + AllDetails()
            + getId()
            + idProperty()
            + getFirst()
            + firstProperty()
            + getLast()
            + lastProperty()
            + getAge()
            + ageProperty()
            + getHobby()
            + hobbyProperty()
            + getJob()
            + jobProperty()
            + getSalary()
            + salaryProperty()
            + getTest1()
            + test1Property()
            + getTest2()
            + test2Property()
            + getTest3()
            + test3Property()
            + getTest4()
            + test4Property()
            + getTest5()
            + test5Property()
            + getTest6()
            + test6Property()
            + getTest7()
            + test7Property()
            + getTest8()
            + test8Property()
            + getTest9()
            + test9Property()
            + getTest10()
            + test10Property()
            + getAve()
            + aveProperty()
            + setId()
            + setFirst()
            + setLast()
            + setAge()
            + setHobby()
            + setJob()
            + setSalary()
            + setTest1()
            + setTest2()
            + setTest3()
            + setTest4()
            + setTest5()
            + setTest6()
            + setTest7()
            + setTest8()
            + setTest9()
            + setTest10()
            + setAve()
            + toString()
        }
      }
    }
  }
  

  package  {
    package JavaFinalFx {
      package JavaFinalFx.overview {
        class Overview {
            - tableUser : TableView<AllDetails>
            - columnId : TableColumn<AllDetails, Integer>
            - columnFirst : TableColumn<AllDetails, String>
            - columnLast : TableColumn<AllDetails, String>
            - columnAge : TableColumn<AllDetails, Integer>
            - columnHobby : TableColumn<AllDetails, String>
            - columnJob : TableColumn<AllDetails, String>
            - columnSalary : TableColumn<AllDetails, Integer>
            - columnTest1 : TableColumn<AllDetails, Integer>
            - columnTest2 : TableColumn<AllDetails, Integer>
            - columnTest3 : TableColumn<AllDetails, Integer>
            - columnTest4 : TableColumn<AllDetails, Integer>
            - columnTest5 : TableColumn<AllDetails, Integer>
            - columnTest6 : TableColumn<AllDetails, Integer>
            - columnTest7 : TableColumn<AllDetails, Integer>
            - columnTest8 : TableColumn<AllDetails, Integer>
            - columnTest9 : TableColumn<AllDetails, Integer>
            - columnTest10 : TableColumn<AllDetails, Integer>
            - columnTestAve : TableColumn<AllDetails, Integer>
            - data : ObservableList<AllDetails>
            ~ conn : Connection
            ~ stmt : Statement
            ~ event : ActionEvent
            + combo : ComboBox
            {static} - out : Formatter
            - loadDataFromDatabase()
            + gotoSalaryGragh()
            + resultToTextFile()
            + initialize()
        }
      }
    }
  }
  

  package  {
    package JavaFinalFx {
      package JavaFinalFx.overview {
        class Test1BarController {
            - barChart : BarChart<?, ?>
            - x : CategoryAxis
            - y : NumberAxis
            - back : Button
            - showgragh : Button
            - graghAge : Button
            - graghSalary : Button
            - data : ObservableList<AllDetails>
            - comboBox : ComboBox
            ~ event : ActionEvent
            ~ conn : Connection
            ~ numOfTest : int
            + initialize()
            + clear()
            + gragh()
        }
      }
    }
  }
  

  Overview -up-|> Initializable
  Overview o-- DbConnection : dc
  Test1BarController -up-|> Initializable
  Test1BarController o-- DbConnection : dc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
